# agenticai-workshop-20250312

./: .gitignore  pyproject.toml
